Issue #7382: Fix bytes.__getnewargs__.