Objects/bytesobject.c
@@ -2807,7 +2807,7 @@ bytes_sizeof(PyBytesObject *v)
 static PyObject *
 bytes_getnewargs(PyBytesObject *v)
 {
-	return Py_BuildValue("(s#)", v->ob_sval, Py_SIZE(v));
+	return Py_BuildValue("(y#)", v->ob_sval, Py_SIZE(v));
 }
 
 
